# mcp-odoo

./: .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml
src/mcp_odoo_hosted/: __init__.py  auth.py  config.py  context.py  main.py  odoo_client.py  server.py
src/mcp_odoo_hosted/tools/: __init__.py  _base.py  contacts.py  expenses.py  hr.py  invoices.py  products.py  projects.py  sales.py  timesheets.py  utilities.py
