[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-odoo-hosted"
version = "1.0.0"
description = "Odoo MCP server — Streamable HTTP transport with OAuth 2.0 (hosted on Railway)"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # MCP Python SDK — Streamable HTTP transport
    "mcp[cli]>=1.6.0",
    # ASGI server
    "uvicorn[standard]>=0.29.0",
    "starlette>=0.37.0",
    # Settings / validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # JWT / OAuth
    "python-jose[cryptography]>=3.3.0",
    # Async-friendly HTTP (used internally by Starlette)
    "httpx>=0.27.0",
    # Redis — persistent OAuth store (clients + auth codes survive restarts)
    "redis[asyncio]>=5.0.0",
    # TTL-based in-memory cache (fallback when Redis is unavailable)
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
mcp-odoo-hosted = "mcp_odoo_hosted.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_odoo_hosted"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
